# XBBot

./: !RUN.bat  .gitignore  README.md  RUN_TESTS.bat  UserGuide.md  config.py.example  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: database.py  keyboards.py  states.py  utils.py
app/handlers/: activity_handlers.py  admin_commands.py  common.py  event_handlers.py  user_commands.py
app/services/: scheduler_jobs.py  webhook_handler.py
update/: !UPDATE_project.bat  Z_GATHER_project.bat  split_ai_code.py
